style: fix SortBy overlapping mobile menu

--- a/src/components/FeedbackHub/SortBy/SortBy.module.scss
+++ b/src/components/FeedbackHub/SortBy/SortBy.module.scss
@@ -87,7 +87,7 @@
 
 @media (width <= var.$breakpoint-762) {
   .container {
-    z-index: 100;
+    z-index: 12;
     top: 4.875rem;
     position: sticky;
     border-radius: initial;
